Deployments/Service-One-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-one-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-one-pod
  template:
    metadata:
      labels:
        app: microservice-one-pod
    spec:
      containers:
      - name: microservice-one-container
        image: ingjavierr/microservicio-one:v1
        ports:
        - containerPort: 8090
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-one-svc
spec:
  selector:
    app: microservice-one-pod
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  type: LoadBalancer
