Deployments/Services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-two-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-two-pod
  template:
    metadata:
      labels:
        app: microservice-two-pod
    spec:
      containers:
      - name: microservice-two-container
        image: postgres:11
        ports:
        - containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-two-svc
spec:
  selector:
    app: microservice-two-pod
  ports:
  - port: 8100
    protocol: TCP
    targetPort: 8100
  type: LoadBalancer
