Deployments/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /prueba(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: microservice-two-svc
            port:
              number: 8100
      - path: /prueba2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: microservice-two-svc
            port:
              number: 8100
  ingressClassName: nginx
