Deployments/Kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: oidc
    konghq.com/plugins: rate-limit
    konghq.com/plugins: ip-restriction
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /prueba
        pathType: ImplementationSpecific
        backend:
          service:
            name: microservice-two-svc
            port:
              number: 8100
